; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/gspca/extr_spca1528.c_sd_pkt_scan.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/gspca/extr_spca1528.c_sd_pkt_scan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gspca_dev = type { i64 }
%struct.sd = type { i32, i32* }

@sd_pkt_scan.ffd9 = internal constant [2 x i32] [i32 255, i32 217], align 4
@LAST_PACKET = common dso_local global i64 0, align 8
@FIRST_PACKET = common dso_local global i64 0, align 8
@JPEG_HDR_SZ = common dso_local global i32 0, align 4
@DISCARD_PACKET = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gspca_dev*, i32*, i32)* @sd_pkt_scan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sd_pkt_scan(%struct.gspca_dev* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.gspca_dev*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.sd*, align 8
  store %struct.gspca_dev* %0, %struct.gspca_dev** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %9 = bitcast %struct.gspca_dev* %8 to %struct.sd*
  store %struct.sd* %9, %struct.sd** %7, align 8
  %10 = load i32, i32* %6, align 4
  %11 = icmp slt i32 %10, 3
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  br label %78

13:                                               ; preds = %3
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* %14, align 4
  %16 = icmp eq i32 %15, 2
  br i1 %16, label %17, label %73

17:                                               ; preds = %13
  %18 = load i32*, i32** %5, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 1
  %20 = load i32, i32* %19, align 4
  %21 = and i32 %20, 2
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %42

23:                                               ; preds = %17
  %24 = load i32*, i32** %5, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 1
  %26 = load i32, i32* %25, align 4
  %27 = and i32 %26, 1
  %28 = icmp ne i32 %27, 0
  %29 = xor i1 %28, true
  %30 = zext i1 %29 to i32
  %31 = load %struct.sd*, %struct.sd** %7, align 8
  %32 = getelementptr inbounds %struct.sd, %struct.sd* %31, i32 0, i32 0
  store i32 %30, i32* %32, align 8
  %33 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %34 = load i32*, i32** %5, align 8
  %35 = getelementptr inbounds i32, i32* %34, i64 2
  %36 = load i32, i32* %6, align 4
  %37 = sub nsw i32 %36, 2
  %38 = call i32 @add_packet(%struct.gspca_dev* %33, i32* %35, i32 %37)
  %39 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %40 = load i64, i64* @LAST_PACKET, align 8
  %41 = call i32 @gspca_frame_add(%struct.gspca_dev* %39, i64 %40, i32* getelementptr inbounds ([2 x i32], [2 x i32]* @sd_pkt_scan.ffd9, i64 0, i64 0), i32 2)
  br label %78

42:                                               ; preds = %17
  %43 = load i32*, i32** %5, align 8
  %44 = getelementptr inbounds i32, i32* %43, i64 1
  %45 = load i32, i32* %44, align 4
  %46 = and i32 %45, 1
  %47 = load %struct.sd*, %struct.sd** %7, align 8
  %48 = getelementptr inbounds %struct.sd, %struct.sd* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 8
  %50 = icmp ne i32 %46, %49
  br i1 %50, label %51, label %52

51:                                               ; preds = %42
  br label %74

52:                                               ; preds = %42
  %53 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %54 = getelementptr inbounds %struct.gspca_dev, %struct.gspca_dev* %53, i32 0, i32 0
  %55 = load i64, i64* %54, align 8
  %56 = load i64, i64* @LAST_PACKET, align 8
  %57 = icmp eq i64 %55, %56
  br i1 %57, label %58, label %66

58:                                               ; preds = %52
  %59 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %60 = load i64, i64* @FIRST_PACKET, align 8
  %61 = load %struct.sd*, %struct.sd** %7, align 8
  %62 = getelementptr inbounds %struct.sd, %struct.sd* %61, i32 0, i32 1
  %63 = load i32*, i32** %62, align 8
  %64 = load i32, i32* @JPEG_HDR_SZ, align 4
  %65 = call i32 @gspca_frame_add(%struct.gspca_dev* %59, i64 %60, i32* %63, i32 %64)
  br label %66

66:                                               ; preds = %58, %52
  %67 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %68 = load i32*, i32** %5, align 8
  %69 = getelementptr inbounds i32, i32* %68, i64 2
  %70 = load i32, i32* %6, align 4
  %71 = sub nsw i32 %70, 2
  %72 = call i32 @add_packet(%struct.gspca_dev* %67, i32* %69, i32 %71)
  br label %78

73:                                               ; preds = %13
  br label %74

74:                                               ; preds = %73, %51
  %75 = load i64, i64* @DISCARD_PACKET, align 8
  %76 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %77 = getelementptr inbounds %struct.gspca_dev, %struct.gspca_dev* %76, i32 0, i32 0
  store i64 %75, i64* %77, align 8
  br label %78

78:                                               ; preds = %74, %66, %23, %12
  ret void
}

declare dso_local i32 @add_packet(%struct.gspca_dev*, i32*, i32) #1

declare dso_local i32 @gspca_frame_add(%struct.gspca_dev*, i64, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
